--- a/index.html
+++ b/index.html
@@ -77,15 +77,18 @@
     </main>
     <footer>
         <div class="container footer-content">
-            <div class="logo-aligment">
-                <img src="img/instagram.png" alt="Instagram">
-                <a href="#">@DSSuperFit</a>
+
+            <div class="logo-aligment-right">
+                <div class="logo-aligment">
+                    <img src="img/instagram.png" alt="Instagram">
+                    <a href="#">@DSSuperFit</a>
+                </div>
+                <div class="logo-aligment">
+                    <img src="img/twitter.png" alt="twitter">
+                    <a href="#">/DSSuperFit</a>
+                </div>
             </div>
-            <div class="logo-aligment">
-                <img src="img/twitter.png" alt="twitter">
-                <a href="#">/DSSuperFit</a>
-            </div>
-            <div>
+            <div class="address-aligment">
                 <a href="#">Todos os direitos reservados.</a>
                 <address>Rua da Pipoca, 150</address>
             </div>
